--- a/termo.html
+++ b/termo.html
@@ -94,18 +94,52 @@
         </div>
     </div>
 
-    <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const id = urlParams.get('id');
-        const lista = JSON.parse(localStorage.getItem('equipamentos') || '[]');
-        const item = lista.find(el => el.id == id);
+    <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
-        if (item) {
-            document.getElementById('item-nome').innerText = item.tipo;
-            document.getElementById('item-tombamento').innerText = item.tombamento;
-            document.getElementById('item-marca-modelo').innerText = `${item.marca} / ${item.modelo}`;
-            document.getElementById('item-secretaria').innerText = item.secretaria + " (" + (item.localizacao || "") + ")";
-        }
-    </script>
+    // Suas credenciais
+    const firebaseConfig = {
+        apiKey: "AIzaSyB7kGKWnj0EeQyPLhFmYE0Otju-AVgOs7U",
+        authDomain: "gerenciamento-maquinas-goiana.firebaseapp.com",
+        databaseURL: "https://gerenciamento-maquinas-goiana-default-rtdb.firebaseio.com",
+        projectId: "gerenciamento-maquinas-goiana",
+        storageBucket: "gerenciamento-maquinas-goiana.firebasestorage.app",
+        messagingSenderId: "532766971298",
+        appId: "1:532766971298:web:d04d1e40d0d349a7a48efb"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    // 1. Pegamos o ID da URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const id = urlParams.get('id');
+
+    if (id) {
+        // 2. Referência para o item no Firebase
+        const itemRef = ref(db, `equipamentos/${id}`);
+
+        onValue(itemRef, (snapshot) => {
+            const item = snapshot.val();
+
+            if (item) {
+                // 3. Preenchimento usando SEUS IDs atuais do HTML
+                document.getElementById('item-nome').innerText = item.tipo;
+                document.getElementById('item-tombamento').innerText = item.tombamento;
+                document.getElementById('item-marca-modelo').innerText = `${item.marca} / ${item.modelo}`;
+                document.getElementById('item-secretaria').innerText = item.secretaria + " (" + (item.localizacao || "") + ")";
+                
+                // Opcional: imprimir automaticamente após carregar
+                // window.print();
+            } else {
+                alert("Equipamento não encontrado!");
+                window.location.href = 'index.html';
+            }
+        }, { onlyOnce: true });
+    } else {
+        window.location.href = 'index.html';
+    }
+</script>
 </body>
 </html>
