--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@
                         <option value="EDUCAÇÃO">Educação</option>
                         <option value="ADMINISTRAÇÃO">Administração</option>
                     </select>
+                </div>
 
                 <div class="buttons-group" style="display: flex; gap: 10px; flex-wrap: wrap;">
                     <div style="flex: 1; min-width: 140px; position: relative;">
