--- a/index.html
+++ b/index.html
@@ -532,10 +532,9 @@
                 <select id="filtroSecretaria" onchange="window.filtrarTabela()" class="search-box" style="flex: 1; min-width: 150px;">
                     <option value="">Todas as Secretarias</option>
                     <option value="GABINETE">Gabinete</option> 
-                    <option value="SAÚDE">Saúde</option>
-                    <option value="EDUCAÇÃO">Educação</option>
+                    <option value="PLANEJAMENTO">Planejamento</option>
+                    <option value="CONTROLADORIA">Controladoria</option>
                     <option value="LICITAÇÃO">Licitação</option>
-                    <option value="ADMINISTRAÇÃO">Administração</option>
                 </select>
             </div>
 
