--- a/documentos.html
+++ b/documentos.html
@@ -546,8 +546,7 @@
                 <div style="page-break-before: always; margin-top: 30px;">
                     <div class="print-header" style="text-align: center; border-bottom: 2px solid #000; margin-bottom: 20px; padding-bottom: 10px;">
                         <img src="logo-prefeitura.png" class="print-logo" style="max-width: 150px; margin-bottom: 10px;">
-                        <div style="font-weight: bold;">PREFEITURA MUNICIPAL DE GOIANA</div>
-                        <div style="font-size: 0.8rem;">SETOR DE TECNOLOGIA DA INFORMAÇÃO</div>
+                        <div style="font-size: 0.8rem;">SETOR DE TECNOLOGIA DO GABINETE</div>
                     </div>
 
                     <div class="print-title" style="background: #eee; padding: 5px; font-weight: bold; border: 1px solid #000; text-align: center; text-transform: uppercase; margin-bottom: 20px;">
